# xf86-input-synlx40

./: COPYING  Makefile.am  README.md  configure.ac  xorg-synlx40.pc.in
conf/: 10-synlx40.conf  Makefile.am
include/: synaptics-properties.h
man/: Makefile.am
src/: Makefile.am  eventcomm.c  properties.c  synaptics.c  synapticsstr.h  synproto.c  synproto.h
tools/: synclient.c
